--- a/style.css
+++ b/style.css
@@ -1,19 +1,9 @@
 
         *{
             background-color: #fff9ac;
-        }
-        h1{
-            text-align: center;
+           
         }
 
-
-        #desmarcarTodosButton{
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-
-        
         header {
             color: #181818;
             text-align: center;
@@ -41,28 +31,78 @@
         }
 
 
-        h2{
+        h1{
             text-align: center;
         }
-        table {
-            border-collapse:separate;
-            width: 50%;
-            align-items: center;
-            margin: 0 auto;
-            border: 2px solid #333; /* Define a cor da borda e a largura */
-        }
-        
-        th, td {
-            border: 1px solid #333; /* Define a cor da borda das células */
-            padding: 8px;
-            text-align: left;
-        }
-        
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-        
 
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
+
+        #desmarcarTodosButton{
+            text-align: left;
+            margin-left: 20.3%;
+            margin-bottom:30px;
+            margin-top: 30px;
+
+
+            
         }
+        .movie {
+            margin-left: 20%;
+            margin-right: 20%;
+            display: flex;
+            justify-content: space-between;
+            text-align: center;
+            align-items: flex-start; /* Alinhar o conteúdo verticalmente ao topo */
+        }
+        
+        /* Alinhar e centralizar*/
+        .movie > div {
+            width: 170px; /* Largura fixa para todas as divs dos filmes */
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Alinhar o conteúdo verticalmente ao centro */
+        }
+
+
+
+        /*capa*/
+        .movie img {
+            display: block;
+            margin: 0 auto;
+            width: 100%; /* Tamanho fixo para todas as imagens */
+            height: 250px; /* Altura fixa para todas as imagens */
+            transition: transform 0.3s; /* Adiciona uma transição suave para a transformação */
+        }
+
+
+/* trasição de zoom */
+.movie img:hover {
+    transform: scale(1.1); 
+}
+        
+        /*títulos do filme */
+        .movie h3 {
+            margin-top: 10px;
+            color: #9f00f4;
+            font-size: 20px;
+            height: 40px; /* Altura fixa para todos os títulos */
+        }
+        
+        .movie h2 {
+            margin-top: 10px;
+            color: #9f00f4;
+            font-size: 14.4px;
+            height: 40px; /* Altura fixa para todos os títulos */
+        }
+        
+        /* Estilos para o botão "Marcar como Assistido" */
+        .movie button {
+            background-color: #9f00f4;
+            border: none;
+            color: white;
+            padding: 6px 9px;
+            font-size: 15px;
+            cursor: pointer;
+           margin-bottom: 20px;
+            margin-top: auto; /* Empurre o botão para a parte inferior da div */
+        }
+        
