--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 
-        *{
+        body{
             background-color: #fff9ac;
            
         }
 
         header {
-            color: #181818;
+            color: #ffffff;
             text-align: center;
             padding: 10px 0;
+            background-color: #9f00f4;
+           
         }
 
         header h1 {
@@ -18,6 +20,7 @@
             list-style-type: none;
             padding: 0;
             margin: 0;
+           
         }
 
         nav ul li {
@@ -27,7 +30,7 @@
 
         nav ul li a {
             text-decoration: none;
-            color: #111010;
+            color: #ffffff;
         }
 
 
@@ -103,6 +106,6 @@
             font-size: 15px;
             cursor: pointer;
            margin-bottom: 20px;
-            margin-top: auto; /* Empurre o botão para a parte inferior da div */
+            margin-top: 30px; /* Empurre o botão para a parte inferior da div */
         }
         
