--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #fff9ac;
+    background-color: #9f00f4;
 
 }
 
@@ -16,7 +16,7 @@ body {
 }
 
 main {
-    background-color: rgb(195, 243, 247);
+    background-color: #fff9ac;
     width: 560px;
     
     padding: 40px;
