--- a/style.css
+++ b/style.css
@@ -4,6 +4,32 @@
            
         }
 
+
+
+/* Botão Subir Topo */
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #9f00f4;
+    color: bisque;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+  }
+  
+  #myBtn:hover {
+    background-color: #000000;
+  }
+  
+  /* Botão Subir Topo */
+ 
+        
         header {
             color: #ffffff;
             text-align: center;
