--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
-
-        body{
-            background-color: #fff9ac;
-           
-        }
-
-
+body{
+    background-color: #fff9ac; 
+}
 
 /* Botão Subir Topo */
 #myBtn {
@@ -23,85 +19,75 @@
     border-radius: 10px;
   }
   
-  #myBtn:hover {
+#myBtn:hover {
     background-color: #000000;
   }
-  
-  /* Botão Subir Topo */
- 
-        
-        header {
-            color: #ffffff;
-            text-align: center;
-            padding: 10px 0;
-            background-color: #9f00f4;
+
+header {
+    color: #ffffff;
+    text-align: center;
+    padding: 10px 0;
+    background-color: #9f00f4;
            
-        }
+}
 
-        header h1 {
-            margin: 0;
-        }
+header h1 {
+     margin: 0;
+}
 
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-           
-        }
+ nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;      
+}
 
-        nav ul li {
-            display: inline;
-            margin-right: 10px;
-        }
+ nav ul li {
+    display: inline;
+    margin-right: 10px;
+ }
 
-        nav ul li a {
-            text-decoration: none;
-            color: #ffffff;
-        }
-
-
-        h1{
-            text-align: center;
-        }
+nav ul li a {
+    text-decoration: none;
+    color: #ffffff;
+ }
 
 
-        #desmarcarTodosButton{
-            text-align: left;
-            margin-left: 20.3%;
-            margin-bottom:30px;
-            margin-top: 30px;
+h1{
+    text-align: center;
+}
 
 
-            
-        }
-        .movie {
-            margin-left: 20%;
-            margin-right: 20%;
-            display: flex;
-            justify-content: space-between;
-            text-align: center;
-            align-items: flex-start; /* Alinhar o conteúdo verticalmente ao topo */
-        }
+#desmarcarTodosButton{
+    text-align: left;
+    margin-left: 20.3%;
+    margin-bottom:30px;
+    margin-top: 30px;
+}
+
+.movie {
+    margin-left: 20%;
+    margin-right: 20%;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    align-items: flex-start; /* Alinhar o conteúdo verticalmente ao topo */
+}
         
-        /* Alinhar e centralizar*/
-        .movie > div {
-            width: 170px; /* Largura fixa para todas as divs dos filmes */
-            display: flex;
-            flex-direction: column;
-            align-items: center; /* Alinhar o conteúdo verticalmente ao centro */
-        }
-
-
-
+/* Alinhar e centralizar*/
+.movie > div {
+    width: 170px; /* Largura fixa para todas as divs dos filmes */
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Alinhar o conteúdo verticalmente ao centro */
+}
         /*capa*/
-        .movie img {
-            display: block;
-            margin: 0 auto;
-            width: 100%; /* Tamanho fixo para todas as imagens */
-            height: 250px; /* Altura fixa para todas as imagens */
-            transition: transform 0.3s; /* Adiciona uma transição suave para a transformação */
-        }
-
+.movie img {
+    display: block;
+    margin: 0 auto;
+    width: 100%; /* Tamanho fixo para todas as imagens */
+    height: 250px; /* Altura fixa para todas as imagens */
+    transition: transform 0.3s; /* Adiciona uma transição suave para a transformação */
+}
 
 /* trasição de zoom */
 .movie img:hover {
@@ -109,29 +95,29 @@
 }
         
         /*títulos do filme */
-        .movie h3 {
-            margin-top: 10px;
-            color: #9f00f4;
-            font-size: 20px;
-            height: 10px; /* Altura fixa para todos os títulos */
-        }
+.movie h3 {
+    margin-top: 10px;
+    color: #9f00f4;
+    font-size: 20px;
+    height: 10px; /* Altura fixa para todos os títulos */
+}
         
-        .movie h2 {
-            margin-top: 10px;
-            color: #9f00f4;
-            font-size: 14.4px;
-            height: 40px; /* Altura fixa para todos os títulos */
-        }
+.movie h2 {
+    margin-top: 10px;
+    color: #9f00f4;
+    font-size: 14.4px;
+    height: 40px; /* Altura fixa para todos os títulos */
+}
         
-        /* Estilos para o botão "Marcar como Assistido" */
-        .movie button {
-            background-color: #9f00f4;
-            border: none;
-            color: white;
-            padding: 6px 9px;
-            font-size: 15px;
-            cursor: pointer;
-           margin-bottom: 20px;
-            margin-top: 30px; /* Empurre o botão para a parte inferior da div */
-        }
+       
+.movie button {
+    background-color: #9f00f4;
+    border: none;
+    color: white;
+    padding: 6px 9px;
+    font-size: 15px;
+    cursor: pointer;
+    margin-bottom: 20px;
+    margin-top: 30px; /* Empurra o botão para a parte inferior da div */
+}
         
