--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+.fundo{
+    background-color: #000000;
+    height: 250px;
+    
+}
+
 
 /* Estilo para os espaços reservados dos filmes da trilogia */
 .trilogy-movies {
