--- a/style.css
+++ b/style.css
@@ -1,8 +1,30 @@
-.fundo{
-    background-color: #000000;
-    height: 250px;
-    
+/* Defina o estilo padrão para filmes como "display: none" */
+.movie {
+    display: none;
 }
+
+/* Defina o estilo para filmes do gênero selecionado como "display: inline-block" */
+.movie.active {
+    display: inline-block;
+}
+
+/* Estilo para os botões de filtro */
+#filtro {
+    text-align: left;
+    margin-top: 20px;
+}
+
+#filtro label {
+    margin-right: 10px;
+}
+
+#filtro button {
+    background-color: #ffffff;
+    border: none;
+    color: #9f00f4;
+    border-radius: 5px;
+}
+
 
 
 /* Estilo para os espaços reservados dos filmes da trilogia */
@@ -65,6 +87,8 @@ height: 250px;
 
 body{
     background-color: #fff9ac; 
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 /* Botão Subir Topo */
@@ -128,21 +152,18 @@ h1{
 
 /*Botão desmarcar*/
 #desmarcarTodosButton{
-    text-align: left;
-    margin-left: 20.3%;
     margin-bottom:30px;
     margin-top: 30px;
 }
 
 .movie {
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-bottom: 20px; 
     display: flex;
     justify-content: space-between;
     text-align: center;
-    align-items: flex-start; /* Alinhar o conteúdo verticalmente ao topo */
+    align-items: flex-start;
 }
-        
+      
 /* Alinhar e centralizar*/
 .movie > div {
     width: 170px; /* Largura fixa para todas as divs dos filmes */
